tests/mm0_mmu/fail/bad-sort214.mm0
-- bad modifier order
strict pure free sort s214;